#264: Correct log_file_name parameter name for java and ruby

--- a/templates/default/agent/newrelic.yml.erb
+++ b/templates/default/agent/newrelic.yml.erb
@@ -112,9 +112,9 @@ common: &default_settings
   # The name of the log file.
   # Default is newrelic_agent.log.
   <% if @resource.logfile.nil? %>
-  log_file: newrelic_agent.log
+  log_file_name: newrelic_agent.log
   <% else %>
-  log_file: <%= @resource.logfile %>
+  log_file_name: <%= @resource.logfile %>
   <% end %>
 
   # The log file directory.
